Updated css for podcast

--- a/public/css/od-review-for-podcast.css
+++ b/public/css/od-review-for-podcast.css
@@ -28,3 +28,6 @@ a.readmore-toggle {
 	background: none !important;
 	border: none !important;
 }
+.strong-view.wpmtst-default .wpmtst-testimonial-field {
+	text-align:left !important;
+}
